[package]
name = "ossim_oxide"
version = "0.1.0"
authors = ["Dylan-Cannisi <Dylan.Cannisi@digitalglobe.com>"]
edition = "2018"

[[bin]]
name = "ossim-info"
path = "src/apps/ossim_info.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rayon = "1.2.0"
